--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,12 @@ psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
 djangorestframework = "^3.14.0"
 pytest-django = "^4.11.1"
-pandas = "^2.2.3"
+pandas = "2.2.2"
 requests = "^2.32.3"
+scikit-learn = "1.5.1"
+psycopg2 = "^2.9.10"
+tensorflow = "2.17.0"
+psycopg = "^3.2.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
